--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "swoop",
+  "version": "2022.06.10.1056",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,7 +10,6 @@
   },
   "dependencies": {
     "@chec/commerce.js": "^2.8.0",
-    "@sendgrid/mail": "^7.6.2",
     "@stripe/react-stripe-js": "^1.7.2",
     "@stripe/stripe-js": "^1.28.0",
     "dotenv": "^16.0.0",
